--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "compute dashboard",
   "main": "index.js",
   "scripts": {
-    "dev": "",
-    "build": "",
+    "dev": "webpack-dev-server --mode development",
+    "build": "webpack --mode production",
     "build-docker": "npm run build && docker build . -t compute-dashboard-frontend",
     "docker": "docker run --rm -d -p 8080:80 -p 8081:9090 --add-host api_backend:127.0.0.1:9090 compute-dashboard-frontend",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,11 +20,22 @@
   },
   "homepage": "https://github.com/EyalAr/compute-dashboard-frontend#readme",
   "devDependencies": {
-    "eslint": "^5.16.0"
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "eslint": "^5.16.0",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "http-status-codes": "^1.3.2",
     "prop-types": "^15.7.2",
+    "query-string": "^6.4.2",
     "react": "^16.8.6",
-    "react-admin": "^2.8.3"
+    "react-admin": "^2.8.3",
+    "react-dom": "^16.8.6"
   }
 }
