--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,18 +1,25 @@
-server {
-  listen 80;
- 
-  location /api/ {
-    proxy_pass http://api_backend;
-    proxy_http_version 1.1;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $http_host;
-    proxy_set_header X-Real-IP $remote_addr;
-  }
+events {
+  use epoll;
+  worker_connections 128;
+}
 
-  location / {
-    alias /usr/share/nginx/html/;
-    gzip_static on;
-    expires max;
-    add_header Cache-Control public;
+http {
+  server {
+    listen 80;
+  
+    location /api/ {
+      proxy_pass http://compute-dashboard-backend/;
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location / {
+      alias /usr/share/nginx/html/;
+      gzip_static on;
+      expires max;
+      add_header Cache-Control public;
+    }
   }
 }
